--- a/portpolio.css
+++ b/portpolio.css
@@ -1,3 +1,4 @@
+
 body{
     font-family:'poppins'sans-serif;
     margin:0;
@@ -9,15 +10,22 @@ body{
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-weight:400px;
     padding-left:20%;
-
 }
 .main_menu{
-    
     text-align: end;
     padding:0px;
     background:rgb(122, 119, 119);
-    border:3px dashed rgb(162, 188, 172);
+    border:3px dashed rgb(186, 160, 160);
     border-radius:20px;
+    height:40px;
+}
+
+.main_menu{
+    text-align: end;
+    padding:0px;
+    background:rgb(137, 136, 136);
+    border:3px dashed rgb(110, 107, 107);
+    border-radius:40px;
 }
 .main_menu ul {
     list-style:none;
@@ -36,7 +44,8 @@ body{
     display:block;
 }
 .main_menu ul li:hover a {
-    background:rgb(59, 58, 60);
+    background:rgb(131, 130, 133);
+    border-radius:20px;
 }
 .main_menu ul ul {
     position:absolute;
@@ -75,26 +84,24 @@ body{
     font-size:18px;
     z-index: 10;
     transition:0.5s ease;
-
 }
 
 .new:hover{
     transform:scale(1.1)translateY(-3px);
-    box-shadow: 0px 0px 50px 1px  rgb(105, 255, 160);
+    box-shadow: 0px 0px 50px 1px  rgb(145, 137, 144);
 }
 .new h2{
     color:rgb(237, 30, 30);
     font-weight:900;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
-.image img{
-   width:70%;
-   height:60%;
+    .image img{
+   width:60%;
+   height:70%;
    padding-top:10%;
    padding-left:18%;
-   border-top-left-radius: 20cqmin; 
+   border-top-left-radius: 30cqmin; 
    border-bottom-right-radius:20cqmin;    
-
-
 }
 .social_icon a {
     display: inline-flex;
@@ -108,48 +115,148 @@ body{
     transition:0.3s ease;
     border-radius:37%;
     color:white;
-
 }
 
 /*  new hover effect */
 
 .social_icon a:hover{
     color:rgb(8, 80, 224);
-
     transform:scale(1.3)translateY(-3px);
-    
     background:rgb(205, 125, 125);
-
     box-shadow: 0 0 25px rgb(205, 125, 125);
-
 }
 .btn {
      font-size:20px;
      padding:1rem;
      display:inline-flex;
-     background:rgb(48, 37, 37);
+     background:rgb(9, 43, 82);
      border-radius:30%;
      color:white;
      text-decoration: none;
      letter-spacing: 0.2rem;
      font-weight:800;
-     border:3px solid rgb(123, 95, 233);
+     border:3px solid rgb(249, 16, 47);
      transition:0.3s ease;
      cursor:pointer;
+}
+.btn{
+@media screen and (max-width:690px){
+    font-size:xx-large;
+}
+@media screen and (max-width:480px){
+    font-size: 1.5rem;
+}
+
 }
 .btn:hover{
 transform:scale3d(0.13);
 box-shadow: 0 0 25px rgb(216, 153, 153);
-color:rgb(80, 1, 252);
+color:rgb(249, 7, 7);
 }
-
-
-.location a {
+.location a{
     margin:53px;
-    color:#4203ff;
-    font-weight:900;
-    font-family: Arial, Helvetica, sans-serif;
-    padding:20px 20px 10px 
+    font-size:15px;
+    display:block;
+    box-sizing: border-box;
+    color:rgb(255, 255, 255);   
+     text-decoration:none;
+     padding-left:60px;
+     width:15rem;
+}
+@media(max-width:699px){
+.location a {
+    
+    color:#dafefb;
+    justify-content: space-between;
+    margin:5px;
+    height:3rem;
+    padding-left:0px;
+    font-size:20px;
+}
+}
+.location1 a{
+    margin:53px;
+    font-size:15px;
+    box-sizing: border-box;
+    color:#fff;  
+      display:block;  
+     text-decoration:none;
+}
+@media(max-width:699px){
+.location1 a {
+    margin:5px;
+    color:#dafefb;
+    display:block;
+  height:3rem;
+  font-size:20px
+}
+}
+.location2 a{
+    margin:53px;
+    font-size:15px;
+    box-sizing: border-box;
+    color:#fff;   
+      display:block;
+     text-decoration:none;
+}
+@media(max-width:699px){
+.location2 a {
+    margin:5px;
+    color:#dafefb;
+    display:block;
+  height:3rem;
+  font-size:20px
+}
+}
+.location3 a{
+    margin:53px;
+    font-size:15px;
+    box-sizing: border-box;
+    color:#fff;
+    display:block;
+    text-decoration:none;
+}
+@media(max-width:699px){
+.location3 a {
+    margin:5px;
+    color:#dafefb;
+    display:block;
+  height:3rem;
+  font-size:20px;
+}
+}
+
+.web  {
+ display:flex;
+ height:30rem;
+ background:#16171f;
+ width:80%;
+ transition:0.5s;
+ border-radius:30px;
+ align-items:start;
+ justify-content: start;
+ padding-left:10px;
+}
+@media(max-width:600px){
+.web{
+    background-color: rgb(19, 31, 42);
+    width: 100%;
+    height:70rem;
+    display:inline-block;
+    border-radius:4px;
+    font-size:20px;
+}
+}
+.web a:hover {
+transform:scale(1.1)translateY(-3px);
+color:rgb(184, 119, 245);
+border:0.1rem solid rgb(123, 123, 123);
+border-radius:3px ;
+
+
 
 }
+
+
+
 
